Fixes #9062   - Fix left sidebar z-index while using with eea.indicators agg edit.

--- a/eea/geotags/skins/eea_geotags/eea.geotags.css
+++ b/eea/geotags/skins/eea_geotags/eea.geotags.css
@@ -50,7 +50,7 @@
 }
 
 .geo-left {
-  z-index: 1001 !important;
+  z-index: 1020 !important;
 }
 
 /* Left panel */
